# markets-o11y

./: .env.example  .gitignore  README.md  config.example.yaml  docker-compose.yml  pyrightconfig.json
.github/workflows/: ci.yml
db/: init.sql
grafana/dashboards/: markets.json
grafana/provisioning/alerting/: example-alerts.yaml
grafana/provisioning/dashboards/: dashboard.yaml
grafana/provisioning/datasources/: timescaledb.yaml
k8s/: .env.prod.template  .gitignore  Makefile
k8s/kustomize/base/: kustomization.yaml  namespace.yaml
k8s/kustomize/base/configmaps/: app-config.yaml  db-init-scripts.yaml  grafana-dashboards.yaml  grafana-provisioning.yaml  worker-config.yaml  worker-logs-dashboard.yaml
k8s/kustomize/base/deployments/: grafana.yaml  timescaledb.yaml  (+1 more)
k8s/manual/prod/: secrets.yaml.tpl
worker/: Dockerfile  Makefile  pyproject.toml
worker/app/: backfill.py  compact.py  config.py  db.py  fetcher.py  main.py  markets.py
worker/app/config/: __init__.py
worker/app/libs/: backfill.py  compact.py
worker/app/utils/: convert.py  log_utils.py  time.py  yf_utils.py
worker/app/yf/: backfill.py  fetcher.py
worker/markets_o11y_fetcher.egg-info/: PKG-INFO  SOURCES.txt
worker/tests/: test_config.py  test_db.py  test_markets.py
worker/tests/libs/: test_backfill.py  test_compact.py
worker/tests/utils/: test_convert.py  test_log_utils.py  test_time.py  test_yf_utils.py
worker/tests/yf/: test_backfill.py  test_fetcher.py
yfinance/: Dockerfile  requirements.txt
yfinance/app/: backfill.py  compact.py  config.py  db.py  fetcher.py  main.py
(+3 files in other folders)
